--- a/Part1/Part1D_Downstream.Rmd
+++ b/Part1/Part1D_Downstream.Rmd
@@ -13,17 +13,18 @@ vignette: >
 
 [DESeq2]: https://bioconductor.org/packages/DESeq2
 
-# Down-stream analysis
+# Downstream analysis
 
-In this final section we quickly hint at down-stream analysis, and the way in which skills learned in working with _Bioconductor_ objects in one package translate to working with objects in other packages.
+In this section we look into downstream analysis of gene expression data, and the way in which skills learned in working with _Bioconductor_ objects in one package translate to working with objects in other packages.
 
-We start by loading the [DESeq2][] package, a very popular facility for analysing bulk RNAseq differential experssion data.
+We start by loading the [DESeq2][] package, a very popular facility for analysing
+differential expression of bulk RNA-seq data.
 
 ```{r, message=FALSE}
 library("DESeq2")
 ```
 
-The package requires count data like that in the `SummarizedExperiment` we have been working with, in addition to a `formula` describing the experimental design. Some of the observations above suggest that we should include cell line as a covariate, and dexamethazone treatment as the main factor that we are interested in.
+The package requires count data like that in the `SummarizedExperiment` we have been working with, in addition to a `formula` describing the experimental design. We use the cell line as a covariate, and dexamethazone treatment as the main factor that we are interested in.
 
 ```{r}
 dds <- DESeqDataSet(se, design = ~ cell + dex)
@@ -32,7 +33,7 @@ dds
 
 The `dds` object can be manipulated very much like a `SummarizedExperiment`.
 
-The essention DESeq work flow is summarized by a single function call, which performs advanced statistical analysis on the data in the `dds` object.
+The DESeq workflow is summarized by a single function call, which performs statistical analysis on the data in the `dds` object.
 
 ```{r}
 dds <- DESeq(dds)
