--- a/Part2/Part2D_Overlaps.Rmd
+++ b/Part2/Part2D_Overlaps.Rmd
@@ -13,42 +13,48 @@ vignette: >
 
 # Finding overlaps between *GRanges* objects
 
+<img src="files/GRanges_oview.png" alt="overview" width="600"/>
+
 Interval overlapping is the process of comparing the ranges in two
-objects to determine if and when they overlap. As such, it is perhaps
-the most common operation performed on *GRanges* objects. 
+objects to determine whether and to which extent they overlap. 
+As such, it is perhaps the most common operation performed on *GRanges* objects.
 To this end, the `r BiocStyle::Biocpkg("GenomicRanges")`
-package provides a family of interval overlap functions. The most general
-of these functions is `findOverlaps()`, which takes a query and a
-subject as inputs and returns a *Hits* object containing
+package provides a family of interval overlap functions. 
+The most general of these functions is `findOverlaps()`, which takes a query 
+and a subject as inputs and returns a `Hits` object containing
 the index pairings for the overlapping elements.
 
-Let us assume that we have three random data.frame objects, each with
-annoyingly differing ways of naming the columns defining the ranges,
-```{r reps}
-set.seed(66+105+111+99+49+56)
+Let us assume that we have three random `data.frame` objects, each with
+annoyingly differing ways of naming the columns that define the ranges.
 
-pos <- sample(1:200, size = 30L)
-size <- 10L
-end <- size + pos - 1L
-chrom <- sample(paste0("chr", 1:3), size = 30L, replace = TRUE)
-query_df <- data.frame(chrom = chrom, 
-                       start = pos,
-                       end = end)
+```{r reps}
+set.seed(486)
+
+pos <- sample(1:200, size = 30)
+size <- 10
+end <- size + pos - 1
+chrom <- sample(paste0("chr", 1:3), size = 30, replace = TRUE)
+
+query_df <- data.frame(chrom = chrom, start = pos, end = end)
 query_dfs <- split(query_df, 1:3)
-q1 <- rename(query_dfs[[1L]], start = "pos")
-q2 <- rename(query_dfs[[2L]], chrom = "ch", start = "st")
-q3 <- rename(query_dfs[[3L]], end = "last")
+
+q1 <- rename(query_dfs[[1]], start = "pos")
+q2 <- rename(query_dfs[[2]], chrom = "ch", start = "st")
+q3 <- rename(query_dfs[[3]], end = "last")
 ```
+
 The `makeGRangesFromDataFrame()` function can guess some of these, but
-not all of them, so we help it out,
+not all of them.
+
 ```{r makeGRangesFromDataFrame}
 q1 <- makeGRangesFromDataFrame(q1, start.field = "pos")
-q2 <- makeGRangesFromDataFrame(q2, seqnames.field = "ch",
-                                 start.field = "st")
+q2 <- makeGRangesFromDataFrame(q2, seqnames.field = "ch", start.field = "st")
 q3 <- makeGRangesFromDataFrame(q3, end.field = "last")
+
 query <- mstack(q1, q2, q3, .index.var="replicate")
 sort(query, by = ~ start)
 ```
+
 Above, we use the convenient `mstack()` function, which stacks its
 arguments, populating the `.index.var=` column with the origin of each
 range (using the argument names or positions).
@@ -71,42 +77,58 @@ matching query ranges to overlapping subject ranges.
 
 ```{r findOverlaps}
 hits <- findOverlaps(query, subject, ignore.strand=TRUE)
+hits
 ```
 
 We typically use the hits to perform one of two operations: join and
 aggregate. For example, we could inner join the scores from the
-subject using the query and subject indexes,
+subject using the query and subject indexes.
+
 ```{r innerJoin}
 joined <- query[queryHits(hits)]
 joined$score <- subject$score[subjectHits(hits)]
+joined
 ```
+
 The above carries over a single metadata column from the
 subject. Similar code would carry over other columns and even the
 ranges themselves. 
 
 Sometimes, we want to merge the matched query and subject ranges,
-typically by finding their intersection,
+typically by finding their intersection.
+
 ```{r overlapIntersect}
 ranges(joined) <- ranges(pintersect(joined, subject[subjectHits(hits)]))
+joined
 ```
 
 The typical aggregation is counting the number of hits overlapping a
 query. In general, aggregation starts by grouping the subject hits by
-query hits, which we express as a coercion to a *List*,
+query hits, which we express as a coercion to a `List`.
+
 ```{r hitsAsList}
 hitsByQuery <- as(hits, "List")
+hitsByQuery
 ```
-The result is an *IntegerList*, a type of *AtomicList*. *AtomicList*
-objects have many methods for efficient aggregation. In this case, we
-just call `lengths()` to get the count:
+
+The result is an `IntegerList`, a type of `AtomicList`. 
+`AtomicList` objects have many methods for efficient aggregation. 
+In this case, we just call `lengths()` to get the count:
+
 ```{r lengthsHits}
 counts <- lengths(hitsByQuery)
+counts
 ```
-Since this a common operation, there are shortcuts,
+
+Since this a common operation, there are shortcuts:
+
 ```{r countHits}
 counts <- countQueryHits(hits)
+counts
 ```
-or even shorter and more efficient,
+
+Or even shorter and more efficient:
+
 ```{r countOverlaps}
 counts <- countOverlaps(query, subject, ignore.strand=TRUE)
 unname(counts)
@@ -114,7 +136,8 @@ unname(counts)
 
 Often, we want to combine joins and aggregations. For example, we may
 want to annotate each query with the maximum score among the subject
-hits,
+hits.
+
 ```{r joinMax}
 query$maxScore <- max(extractList(subject$score, hitsByQuery))
 subset(query, maxScore > 0)
@@ -123,18 +146,27 @@ subset(query, maxScore > 0)
 In rare cases, we can more or less arbitrarily select one of the
 subject hits. The `select=` argument to `findOverlaps()` automatically
 selects an "arbitrary", "first" (in subject order) or "last" subject
-range,
+range.
+
 ```{r select-first}
-hits <- findOverlaps(query, subject, select="first", ignore.strand=TRUE)
 hits <- findOverlaps(query, subject, select="arbitrary", ignore.strand=TRUE)
 hits
 ```
 
-## Exercises
+## Exercises (15 min)
 
-1. Find the average intensity of the X and Y measurements for each
-   each replicate over all positions in the query object
-2. Add a new column to the intensities object that is the distance from
-   each position to its closest gene (hint `IRanges::distance()`)
-3. Find flanking regions downstream of the genes in gr that have width of 8bp
-4. Are any of the intensities positions within the flanking region?
+We consider the overlap of gene promoter regions and CpG islands in the human genome.
+We use the collection of CpG islands described in
+[Wu et al., 2010](https://doi.org/10.1093/biostatistics/kxq005).
+
+1. Import the collection of CpG islands from
+[here](http://www.haowulab.org/software/makeCGI/model-based-cpg-islands-hg19.txt)
+as a `GRanges`. 
+2. Import the promoter regions in the *hg19* human genome assembly as available 
+[here](http://gattaca.imppc.org/regioner/data/UCSC.promoters.hg19.bed)
+as a `GRanges`. 
+3. Determine the percentage of promoters on chromosome 21 that overlap with at 
+least one CpG island. 
+4. For those promoters that overlap with CpG islands, annotate the number of 
+overlapping CpG islands as an additional column.
+What is the maximum number of overlapping CpG islands for one promoter at a time? 
